# ru-tweet

./: .gitattributes  README.md
ru-client/: README.md  settings.gradle
ru-client/app/: build.gradle
ru-client/app/src/androidTest/java/com/rutweet/ruclient/: ExampleInstrumentedTest.java
ru-client/app/src/main/: AndroidManifest.xml
ru-client/app/src/main/java/com/rutweet/ruclient/: LoginActivity.java  MainActivity.java  MessageListActivity.java  NotificationService.java
ru-client/app/src/main/res/drawable/: rounded_rectangle_green.xml  rounded_rectangle_orange.xml
ru-client/app/src/main/res/layout/: activity_main.xml  activity_message_list.xml  blocked_fragment.xml  following_fragment.xml  item_message_received.xml  item_message_sent.xml  login_main.xml  personal_fragment.xml  timeline_fragment.xml
ru-client/app/src/main/res/menu/: blocked_item_menu.xml  following_item_menu.xml  main_menu.xml  timeline_item_menu.xml
ru-client/app/src/main/res/values/: strings.xml
ru-client/gradle/wrapper/: gradle-wrapper.properties
ru-server/: Cargo.toml  README.md
ru-server/src/: main.rs
ru-server/src/data/: answer.rs  dm.rs  message.rs  mod.rs  session.rs  tweet.rs  user.rs
ru-server/src/database/: mod.rs
ru-server/src/handler/: add_tweet.rs  add_user.rs  block.rs  blocking.rs  delete_tweet.rs  delete_user.rs  dm.rs  follow.rs  following.rs  get_tweet.rs  is_logged.rs  like.rs  list_dm.rs  list_tweet.rs  login.rs  logout.rs  me.rs  mod.rs  token.rs  unblock.rs  unfollow.rs
ru-server/src/notification/: mod.rs
(+23 files in other folders)
