[package]
name = "ru-tweet"
version = "0.1.0"
authors = ["Rodrigo Freitas <rodrigo.freitas@axiros.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
mongodb = "0.4.0"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4.10"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]

[dependencies.reqwest]
version = "0.10.0-alpha.2"
features = ["blocking"]

